// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebpackDevServerOptionHelper host is localhost by default 1`] = `
{
  "devServer": {
    "host": "localhost",
  },
  "stats": {
    "cached": false,
    "cachedAssets": false,
    "colors": true,
  },
}
`;

exports[`WebpackDevServerOptionHelper host is localhost by default 2`] = `
{
  "host": "localhost",
}
`;

exports[`WebpackDevServerOptionHelper supports array config for webpack 1`] = `
[
  {
    "devServer": {
      "port": 8080,
    },
  },
  {
    "devServer": {
      "port": 9090,
    },
  },
]
`;

exports[`WebpackDevServerOptionHelper supports array config for webpack 2`] = `
{
  "port": 9090,
}
`;
